@@ -502,7 +502,10 @@ void FrameBuffer::drawFrameStats(float framesPerSecond)
   ss
     << std::fixed << std::setprecision(1) << framesPerSecond
     << "fps @ "
-    << std::fixed << std::setprecision(0) << 100 * myOSystem.settings().getFloat("speed")
+    << std::fixed << std::setprecision(0) << 100 *
+      (myOSystem.settings().getBool("turbo")
+        ? 20.0F
+        : myOSystem.settings().getFloat("speed"))
     << "% speed";
 
   myStatsMsg.surface->drawString(f, ss.str(), xPos, yPos,
